# WASM-Shellcode-Loader

./: .gitignore  Cargo.toml  README.md
wasm_dropper/: Cargo.toml
wasm_dropper/src/: lib.rs
wasm_gui/: Cargo.toml  README.md
wasm_gui/src/: main.rs
wasm_loader/: Cargo.toml
wasm_loader/src/: main.rs  wasm_dropper.wat
