[package]
name = "wasm_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.8"

[dependencies.egui]
version = "0.32.0"
default-features = false
features = ["rayon", "bytemuck", "log", "serde"]